GNOME Bugzilla – Bug 598277
Cannot access bugzilla.gnome.org from behind a proxy
Last modified: 2010-04-27 13:52:39 UTC
I'm behind a proxy (squid) without authentification. It works well and I can access all my regular website with epy 2.28, both http and https websites. Exception : bugzilla.gnome.org If I type this adress, Epy is looking indefinitely and the throbber is spinning for hours without any timeout. The page stay blank.
Created attachment 147119 [details] [review] Fix Request-Line in https over proxy Try this? (Should fix the bugzilla.gnome.org problem too.)
(In reply to comment #1) > Created an attachment (id=147119) [details] [review] > Fix Request-Line in https over proxy > > Try this? (Should fix the bugzilla.gnome.org problem too.) This is a patch against libsoup? Then we should change the Product.
yes, sorry
OK, I set up squid and tested the patch and it works. This will be in libsoup 2.28.2 in a few weeks. Attachment 147119 [details] pushed as d45a4b1 - Fix Request-Line in https over proxy
*** Bug 600826 has been marked as a duplicate of this bug. ***
*** Bug 616922 has been marked as a duplicate of this bug. ***